<resources>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="investorInformation">Investor Information</string>
    <string name="investorName">Investor Name</string>
    <string name="investorNo">Investor Folio Number</string>
    <string name="investorHolding">Investor Holding</string>
    <string name="investorNav">Investor NAV</string>
    <string name="investorValue">Investor Value</string>
    <string name="investorType">Investor Type</string>
    <string name="from">From </string>
    <string name="to"> to </string>
    <string name="asOf">As of </string>
    <string name="dismissPopupMessage">Tab here to exit</string>
    <string name="english">english</string>
    <string name="vietnamese">tiếng việt</string>
    <string name="hochiminh_contact">VCBF Ho Chi Minh</string>
    <string name="hanoi_contact">VCBF Ha Noi</string>
    <string name="contact_us">Contact Us</string>
    <string name="deleteAllMessage">Delete All</string>
    <string name="fundInformation">INFORMATION</string>
    <string name="fundNAV">NAV</string>
    <string name="fundPerformance">PERFORMANCE</string>
    <string name="fundLogin">LOGIN</string>
    <string name="activity_main_disclaimer">This is the disclaimer</string>
    <string name="activity_main_text1">Welcome to Vietcombank Fund Management</string>
    <string name="activity_main_text2">Touch screen to continue</string>
    <string name="fund_fragment_button_TBF">VCBF Tactical Balanced Fund</string>
    <string name="fund_fragment_button_BCF">VCBF Blue Chip Fund</string>
    <string name="app_name">VCBF</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_tab">VCBF</string>
    <string name="about_us">ABOUT US</string>
    <string name="news">NEWS</string>
    <string name="fund">FUND</string>
    <string name="message">MESSAGES</string>
    <string name="setting">SETTING</string>
    <string name="vcbf_icon">VCBF icon</string>
    <string name="vcbf_banner">VCBF banner</string>
    <string name="month_promt">Choose a month</string>
    <string name="year_promt">Choose a year</string>
    <string name="deleteMessage">Delete</string>
    <string name="cancelMessage">Cancel</string>
    <string name="VCBF_Tatical_Balance_Fund">VCBF Tatical Balance Fund</string>
    <string name="Expense_ratio_and_Turnover_rate">Expense ratio and Turnover rate</string>
    <string name="Tactical_Balanced_Fund">Tactical Balanced Fund</string>
    <string name="LOG_IN">LOG IN</string>
    <string name="Investor_Information">Investor Information</string>
    <string name="Investor_Name">Investor Name</string>
    <string name="Investor_Folio_No.">Investor Folio No.</string>
    <string name="Investor_Holding">Investor Holding</string>
    <string name="Investor_NAV">Investor NAV</string>
    <string name="Investor_Value">Investor Value</string>
    <string name="Fund_Type">Fund Type</string>
    <string name="Email_Address">Email Address</string>
    <string name="Password">Password</string>
    <string name="Log_In">Log In</string>
    <string name="Fund_Prices_and_Breakpoints">Fund Prices and Breakpoints</string>
    <string name="NAV_per_Unit">NAV per Unit</string>
    <string name="Portfolio_Statistics">Portfolio Statistics</string>
    <string name="Net_Asset_Value">Net Asset Value</string>
    <string name="Portfolio_Turnover_Rate">Portfolio Turnover Rate</string>
    <string name="Portfolio_Positions">Portfolio Positions</string>
    <string name="Total_positions">Total Positions</string>
    <string name="Portfolio_Details">Portfolio Details</string>
    <string name="Industry_Break_Down">Industry Break Down</string>
    <string name="Top_5_Holdings">Top 5 Holdings</string>
    <string name="Old_News">Old News</string>
    <string name="Per_Unit_price_VND">Per Unit price (VND)</string>
    <string name="NAV_Unit_percent">NAV/Unit (%)</string>
    <string name="NAV_change">NAV change</string>
    <string name="Fifty_two_Week_Range_VND">52-Week Range (VND)</string>
    <string name="Highest_NAV_unit_52w">Highest NAV/unit (52w)</string>
    <string name="Lowest_NAV_unit_52w">Lowest NAV/unit (52w)</string>
    <string name="VCBF">VCBF</string>
    <string name="Popup">Popup</string>
    <string name="news_all">All News</string>
    <string-array name="month_array">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>
    <string name="bluechipfund" formatted="false">
<![CDATA[
<p><strong>Description<br></strong></p>
<p>VCBF Blue Chip Fund (“VCBF-BCF”) is an open-ended fund which invests up to 100% of its Net Asset Value in listed equities with large market capitalization and good liquidity.</p>
<p><strong>Investment objectives<br></strong></p>
<ul style="list-style-type: disc;">
<li>The investment objective of the Fund is primarily to provide medium to long term capital appreciation. <strong><strong class="x-large"><strong class="x-large"></strong></strong></strong></li>
</ul>
<p><strong>Investment strategy<br></strong></p>
<ul style="list-style-type: disc;">
<li>The Fund will primarily invest in a diversified portfolio of stocks listed on the Ho Chi Minh Stock Exchange (“HSX”) and the Ha Noi Stock Exchange (“HNX”) which have a large market capitalization and are liquid. Stocks with large market capitalization are considered as those with market capitalization larger than the hundredth largest stock listed on the HSX.</li>
<li>The Fund follows a blend of value and growth style of investing.</li>
<li>The Fund will follow a bottom-up approach to selecting stocks for investment, focusing on the individual attributes of a company, and choosing companies across sectors.</li>
</ul>
<p><strong>Benchmark of the Fund<br></strong></p>
<ul style="list-style-type: disc;">
<li>The VN100 Index shall be the benchmark.</li>
</ul>
<p>(VN100 Index means the index of 100 largest market capitalization and high liquidity stocks on the HSX.).</p>
<p><strong>Benefits<br></strong></p>
<ul style="list-style-type: disc;">
<li>The Fund gives you the opportunity to increase long-term returns through investment in a diversified portfolio of companies that are considered to be the best in their industry, i.e. Blue Chips. These companies typically have good growth prospects, have good management teams and are priced reasonably or undervalued.</li>
<li>VCBF Tactical Balanced Fund is an open-ended fund. You can read more about&nbsp; benefits of an open-ended fund in <a href="http://www.vcbf.com/en/open-ended-funds/open-ended-fund-basics/benefits-of-open-ended-funds/">“Benefits of OEFs”</a> item on menu “Open-end funds”.</li>
<li>VCBF Blue Chip Fund focuses on generating long-term returns from investments in large cap companies, hence could be considered as a core equity portfolio for all type of investors with an investment horizon of 3 - 5 years or longer.</li>
</ul>
<p><strong>What type of investors is the fund suitable for?<br></strong></p>
<ul>
<li>VCBF Blue Chip Fund focuses on generating long-tern returns from investments in large cap companies, hence could be considered as a core equity portfolio for all type of investors with an investment horizon of 3-5 years or longer.</li>
</ul></div></div>
]]>
    </string>
    <string name="tacticalbalancedfund" formatted="false">
<![CDATA[
<p><strong>Description<br></strong></p> 
The fund has flexibility in asset allocation taking either defensive or aggressive postures depending on opportunities available at various points in time. Under normal market conditions, the fund will invest 50% of its NAV in equity and 50% in high quality fixed income assets.</p>
<p><strong>Investment objectives<br></strong></p> 
The fund seeks long-term total return via growth of capital and current income</p>
<p><strong>Investment strategy<br></strong></p> 
<ul>
<li><p>The fund&nbsp; invests in a diversified portfolio of listed common stocks, primarily in stocks with large market capitalization and Vietnam Government bonds, municipal bonds or bonds guaranteed by the Government or high quality listed corporate bonds.</p></li>
<li><p>The fund actively seeks an optimal mix of equity and fixed income by evaluating risk and return of investment opportunities across the asset classes.</p></li>
<li><p>The fund follows a blend of value and growth style of equity investing and follows a bottom-up approach to stock-picking by valuing fundamentals of the companies.</p></li>
</ul>
<p><strong>Benefits<br></strong></p> 
<ul>
<li><p>The fund offers a broad diversification and balanced exposure to the asset classes, making it attractive as a solid core holding in an investor’s portfolio.</p></li>
<li><p>The fund benefits from a flexible asset allocation strategy when economic conditions change.</p></li>
<li><p>VCBF Tactical Balanced Fund is an open-ended fund. You can read more about&nbsp; benefits of an open-ended fund in <a href="http://www.vcbf.com/en/open-ended-funds/open-ended-fund-basics/benefits-of-open-ended-funds/">“Benefits of OEFs”</a> item on menu “Open-end funds”.</p></li>
]]>
    </string>
    <string name="hello_blank_fragment">This is a blank fragment.</string>
    <string name="symbol">Symbol</string>
    <string name="license_number">License number</string>
    <string name="supervisory_bank">Supervisory bank</string>
    <string name="auditor">Auditor</string>
    <string name="distributors">Distributors</string>
    <string name="profit_distributions">Profit distributions</string>
    <string name="net_asset_value">Net Asset Value</string>
    <string name="nav_unit">NAV/unit</string>
    <string name="nav_change_since_last_month">NAV change since last month</string>
    <string name="ytd_total_return_at_nav">YTD Total Return at NAV</string>
    <string name="highest_nav_units">Highest NAV/ unit (52w)</string>
    <string name="lowest_nav_units">Lowest NAV/ unit (52w)</string>
    <string name="number_of_outstanding_units">Number of outstanding units</string>
    <string name="percentage_of_foreign_ownership">% of foreign ownership</string>
    <string name="distribution_rate_at_nav">Distribution rate at NAV</string>
    <string name="opearting_expense_rate">Operating expense rate (%)</string>
    <string name="portfolio_turnover_rate">Portfolio turnover rate (%)</string>
    <string name="sales_change">Sales charges (Max)</string>
    <string name="symbol_text">VCBF-TBF</string>
    <string name="license_number_text">07/GCN-UBCK</string>
    <string name="supervisory_bank_text">Deustche Bank AG, Ho Chi Minh City Branch</string>
    <string name="auditor_text">N/A</string>
    <string name="distributors_text">SSI, Vietcombank, VCBS</string>
    <string name="profit_distributions_text">N/A</string>
    <string name="net_asset_value_text">VND  73,976,386,490</string>
    <string name="nav_unit_text">10,580.60</string>
    <string name="nav_change_since_last_month_text">2.88%</string>
    <string name="ytd_total_return_at_nav_text">5.71%</string>
    <string name="highest_nav_units_text">10,787.45</string>
    <string name="lowest_nav_units_text">9,781.44</string>
    <string name="number_of_outstanding_units_text">6,991,698.47</string>
    <string name="percentage_of_foreign_ownership_text">37.27%</string>
    <string name="distribution_rate_at_nav_text">N/A</string>
    <string name="opearting_expense_rate_text">2.24%</string>
    <string name="portfolio_turnover_rate_text">14.55%</string>
    <string name="sales_change_text">2%</string>
</resources>